# quickdcp

./: .env.sample  .env.yaml  .gitignore  DIAGNOSTIC_REPORT.md  Dockerfile  Dockerfile.save  LICENSE  LICENSE.txt  Makefile  Makefile.mak  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: deploy.yml  quickdcp-ci.yml
api/: main.py  startup_check.py
api/routes/: billing.py  internal.py  jobs.py  kdm.py  proof.py  upload_stream.py  verify.py
api/schemas/: proof.py
api/utils/: auth.py  cost_guard.py  db.py  fp_verify.py  manifest.py  proof_store.py  qc.py  ratelimit.py  stripe_verify.py  tsa.py
infra/: Dockerfile  Dockerfile.dockerfile  fly.toml  requirements.txt
infra/terraform/: budget.tf  iam.tf  kms.tf  outputs.tf  providers.tf  s3.tf  variables.tf
ops/: Dockerfile.prod  migrate_proofs_to_db.py  production.env  qdcp_upload.py  tsa_mock.sh  verify_offline.sh
public/: about.html  docker-compose.yml  index.html  openapi.json  quickdcp-shell.js  verify.html
public/docs/: architecture.md  dcp-proof-chain.html
sdks/python/: pyproject.toml
sdks/python/quickdcp/: client.py  init.py
supabase/migrations/: 0001_init.sql  0002_proof_constraints.sql  0003_kdms_constraints.sql  0004_qc_constraints.sql  0005_worker_events_constraints.sql  0006_jobs_constraints.sql  0007_kdm_dates_constraints.sql  0008_vault_constraints.sql  0009_manifest_constraints.sql  0010_customers_constraints.sql  0011_audit_logs.sql  0012_audit_triggers.sql  0013_billing_core.sql  0014_kdm_batches.sql  (+6 more)
vault/: sbom.spdx.json
worker/: worker.py
(+1 files in other folders)
